# Lumina-Note

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  electron-builder.yml  electron.vite.config.ts  index.html  mem.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.lumina/: AGENT.md
Lumina-Note-main/: README.en.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
cloud/: CONTRACT.md  PRD.md  RFC-P1-DRAINED.md  TASKS.md
doc/: claude-code-three-agent-todo.md  llm-wiki-transformation-plan.md
docs/: 2026-03-09-macos-top-layout-debugging-record.md  AGENT_ARCHITECTURE_ISSUE.md  AGENT_CONTEXT_OPTIMIZATION.md  AGENT_DEVELOPMENT.md  AGENT_FORGE_FRONTEND_PLAN.md  AGENT_FORGE_PLAN.md  BROWSER_ROADMAP.md  EDITOR_UI_DESIGN.md  MOBILE_ROADMAP.md  ROOCODE_MULTI_PROVIDER.md  TYPESETTING_ENGINE_PLAN.md  TYPESETTING_ENGINE_PROGRESS.md  WORD_BASELINE_CAPTURE.md  agent-runtime-setup.md  appearance-plugin-guide.md  cloud-sync-dev.md  design-system.md  doc-engine-change-log.md  doc-engine-phase1-report.md  (+17 more)
src-tauri/: Cargo.toml  npm.bat  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/plugins/hello-lumina/: index.js  plugin.json
src-tauri/resources/plugins/openclaw-workspace/: index.js
src-tauri/resources/plugins/pixel-noir/: index.js  plugin.json
src-tauri/resources/plugins/theme-oceanic/: plugin.json
src-tauri/src/: cloud_relay.rs  codex_vscode_host.rs  diagnostics.rs  doc_tools.rs  error.rs  lib.rs  main.rs  mobile_gateway.rs  node_runtime.rs  plugins.rs  proxy.rs  secure_store.rs  traffic_lights.rs
src-tauri/src/agent/: commands.rs  debug_log.rs  durable_memory.rs  emit.rs  explore.rs  forge_loop.rs  llm_client.rs  memory_extract.rs  mod.rs  orchestrator.rs  plan.rs  types.rs  vault.rs  verify.rs
src-tauri/src/agent/deep_research/: builder.rs  crawler.rs  mod.rs  nodes.rs  types.rs
src-tauri/src/agent/graph/: nodes.rs
src-tauri/src/agent/importers/: bookmark.rs  mod.rs  web_clipper.rs
src-tauri/src/agent/messages/: chunks.rs  mod.rs
src-tauri/src/agent/note_map/: mod.rs  parser.rs  ranking.rs  renderer.rs  types.rs
src-tauri/src/agent/tools/: definitions.rs  registry.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/forge_runtime/: permissions.rs
src-tauri/src/forge_runtime/tools/: bash.rs  edit.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  shared.rs  write.rs
src-tauri/src/fs/: manager.rs  mod.rs  watcher.rs
src-tauri/src/langgraph/: ablation.rs  error.rs  executor.rs  graph.rs  metrics.rs  mod.rs  node.rs  state.rs
src-tauri/src/pdf_ocr/: README.md  layout.rs  mod.rs  ocr.rs  pdf.rs  server.rs
src-tauri/src/typesetting/: font_manager.rs  line_break.rs  mod.rs  page_model.rs  pagination.rs  pdf_export.rs  preview_pipeline.rs  preview_viewport.rs  shaping.rs
src-tauri/src/vector_db/: commands.rs  mod.rs
src-tauri/src/webdav/: client.rs  sync.rs
src-tauri/tests/: macos_overlay_config.rs  mcp_integration.rs  tauri_config_titlebar.rs
(+1109 files in other folders)
