[package]
name = "lumina-note"
version = "1.1.0"
description = "A local-first AI-powered note-taking app"
authors = ["Lumina Note Contributors"]
edition = "2021"

[lib]
name = "lumina_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["macos-private-api", "protocol-asset", "unstable", "test"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1.40", features = ["full"] }
notify = "6.1"
walkdir = "2.5"
thiserror = "2.0"
trash = "5"
base64 = "0.22"
regex = "1.12"

# HTTP client for LLM streaming & WebDAV
reqwest = { version = "0.13", features = ["json", "stream", "socks"] }
urlencoding = "2.1"
futures-util = "0.3"
chrono = "0.4"
uuid = { version = "1.20", features = ["v4"] }
once_cell = "1.19"
sha2 = "0.10"
hex = "0.4"
minisign-verify = "0.2"
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSNotification"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSButton", "NSControl", "NSView", "NSResponder"] }
block2 = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
